--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
+
 {
   "name": "burger",
   "version": "1.0.0",
-  "description": "burger app",
-  "main": "index.js",
+  "description": "Creating a Burger app for restaurant",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+
   },
   "repository": {
     "type": "git",
@@ -25,5 +28,11 @@
     "express-handlebars": "^3.0.0",
     "method-override": "^2.3.8",
     "mysql": "^2.13.0"
+  },
+  "engines":{
+    "node":"6.9.4"
   }
+}
+
+  "engines";{}
 }
